--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,6 +1,9 @@
 .popup__container {
   position: relative;
   background-color: white;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 430px;
   height: 330px;
   border-radius: 10px;
