--- a/pages/index.css
+++ b/pages/index.css
@@ -38,3 +38,4 @@
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__button-save/popup__button-save.css);
+@import url(../blocks/popup/__opened/popup__opened.css);
