--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,20 +1,15 @@
 .profile {
-  max-width: 882px;
-  margin: 0 auto;
-  padding: 40px 0 25px 0;
-  background-color: #000000;
   display: flex;
+  flex-direction: row;
+  margin: 41px auto 51px;
+  max-width: 880px;
   justify-content: space-between;
+  align-items: center;
 }
-
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 900px) {
   .profile {
-    padding: 42px 19px 18px 19px;
-  }
-}
-
-@media screen and (max-width: 699px) {
-  .profile {
+    max-width: 600px;
     flex-direction: column;
+    margin: 41px auto 36px;
   }
 }
