--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,13 +1,14 @@
-.popup__input {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 17px;
-  border: none;
-  padding-bottom: 10px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  outline: none;
+.popup__title {
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 29px;
+  margin: 0 0 46px 0;
 }
 
-.popup__input:first-of-type {
-  margin-bottom: 28px;
+@media screen and (max-width: 618px) {
+  .popup__title {
+    font-size: 18px;
+    line-height: 22px;
+    margin-bottom: 75px;
+  }
 }
