--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,31 +1,20 @@
-.profile__add-button {
+.profile__add-button{
+  border: 2px solid #FFFFFF;
+  border-radius: 2px;
+  background-color: black;
+  background-image: url(../../../images/Plus.svg);
+  background-repeat: no-repeat;
+  background-position: center;
   width: 150px;
   height: 50px;
-  border: 2px solid #ffffff;
-  box-sizing: border-box;
-  border-radius: 2px;
-  cursor: pointer;
-  padding: 0;
-  background-color: #000000;
-  background-image: url(../../../images/Plus.svg);
-  background-position: center;
-  background-repeat: no-repeat;
-  align-self: center;
-  transition: opacity 0.3s ease;
 }
-
-.profile__add-button:hover {
-  border: 2px solid #ffffff;
+.profile__add-button:hover{
   opacity: 0.6;
 }
-
-.profile__add-button:focus {
-  opacity: 0.6;
-}
-
-@media screen and (max-width: 699px) {
+@media screen and (max-width: 900px){
   .profile__add-button {
-    margin-top: 36px;
-    width: 282px;
+     max-width: 320px;
+     width: 282px;
+     margin-top: 32px;
   }
 }
