--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,32 +1,21 @@
 .profile__edit-button {
   align-self: center;
+  border: 1px solid #ffffff;
+  background-image: url(../../../images/Edit.svg);
+  background-color: black;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-left: 18px;
   width: 24px;
   height: 24px;
-  border: 1px solid #ffffff;
-  box-sizing: border-box;
-  border-radius: 2px;
-  cursor: pointer;
-  padding: 0;
-  background-color: #000000;
-  background-image: url(../../../images/Edit.svg);
-  background-position: center;
-  background-repeat: no-repeat;
-  transition: opacity 0.3s ease;
 }
-
-.profile__edit-button:hover {
-  border: 2px solid #ffffff;
-  opacity: 0.6;
-}
-
-.profile__edit-button:focus {
-  opacity: 0.6;
-}
-
-@media screen and (max-width: 569px) {
+@media screen and (max-width: 650px) {
   .profile__edit-button {
-    margin-left: 7px;
+    max-width: 320px;
     width: 18px;
     height: 18px;
   }
+}
+.profile__edit-button:hover {
+  opacity: 0.6;
 }
