--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,12 +1,12 @@
 .profile__info {
-  align-self: center;
-  padding: 0 17px 0 30px;
-  max-width: 350px;
+  display: flex;
+  justify-content: space-between;
+  max-width: 336px;
+  align-items: center;
 }
-
-@media screen and (max-width: 569px) {
+@media screen and (max-width: 650px) {
   .profile__info {
-    padding: 0;
-    max-width: 189px;
+    max-width: 320px;
+    margin-top: 25px;
   }
 }
