--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -1,16 +1,21 @@
 .profile__subtitle {
   margin: 0;
-  font-family: 'Inter', Arial, sans-serif;
-  font-style: normal;
-  font-weight: normal;
+  margin-top: 5px;
+  font-weight: 400;
   font-size: 18px;
-  line-height: 1.2;
-  color: #FFFFFF;
-  word-break: break-word;
+  line-height: 22px;
+  color: #ffffff;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 500px;
 }
-
-@media screen and (max-width: 569px) {
+@media screen and (max-width: 650px) {
   .profile__subtitle {
+    max-width: 320px;
     font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+    margin-top: 9px;
   }
 }
