--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,17 +1,17 @@
 .profile__title {
   margin: 0;
-  font-family: 'Inter', Arial, sans-serif;
-  font-style: normal;
   font-weight: 500;
   font-size: 42px;
-  line-height: 1.33;
-  word-break: break-word;
-  color: #FFFFFF;
+  line-height: 48px;
+  color: #ffffff;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
-
-@media screen and (max-width: 569px) {
+@media screen and (max-width: 650px) {
   .profile__title {
+    max-width: 320px;
     font-size: 27px;
-    line-height: 2.07;
+    line-height: 33px;
+    text-align: center;
   }
 }
