--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -2,7 +2,7 @@
   align-self: center;
   border: 1px solid #ffffff;
   background-image: url(../../../images/Edit.svg);
-  background-color: black;
+  background-color: transparent;
   background-repeat: no-repeat;
   background-position: center;
   margin-left: 18px;
