--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,7 +3,7 @@
   width: 100%;
   margin: 0 auto;
   padding-bottom: 41px;
-  border-bottom: 1px solid #545454;
+  border-bottom: 1px solid rgba(54, 54, 54, 0.7);
 }
 
 @media screen and (max-width: 480px) {
