--- a/blocks/place/__info/place__info.css
+++ b/blocks/place/__info/place__info.css
@@ -1,6 +1,5 @@
 .place__info {
-  height: 79px;
-  max-width: 246px;
+  padding: 25px 30px 31px 21px ;
   display: flex;
   justify-content: space-between;
   background-color: #fff;
