--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,20 +1,20 @@
-.profile__add-button{
-  border: 2px solid #FFFFFF;
+.profile__add-button {
+  border: 2px solid #ffffff;
   border-radius: 2px;
-  background-color: black;
+  background-color: transparent;
   background-image: url(../../../images/Plus.svg);
   background-repeat: no-repeat;
   background-position: center;
   width: 150px;
   height: 50px;
 }
-.profile__add-button:hover{
+.profile__add-button:hover {
   opacity: 0.6;
 }
-@media screen and (max-width: 900px){
+@media screen and (max-width: 900px) {
   .profile__add-button {
-     max-width: 320px;
-     width: 282px;
-     margin-top: 32px;
+    max-width: 320px;
+    width: 282px;
+    margin-top: 36px;
   }
 }
