--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -5,6 +5,7 @@
   line-height: 48px;
   color: #ffffff;
   text-overflow: ellipsis;
+  white-space: nowrap;
   overflow: hidden;
 }
 @media screen and (max-width: 650px) {
