--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -7,6 +7,7 @@
   background-position: center;
   width: 150px;
   height: 50px;
+  padding: 0;
 }
 .profile__add-button:hover {
   opacity: 0.6;
@@ -15,6 +16,7 @@
   .profile__add-button {
     max-width: 320px;
     width: 282px;
-    margin-top: 36px;
+    margin-top: 33px;
+    background-size: 16px 16px;
   }
 }
