--- a/pages/index.css
+++ b/pages/index.css
@@ -27,6 +27,7 @@
 @import url(../blocks/place/__title/place__title.css);
 @import url(../blocks/place/__button-like/place__button-like.css);
 @import url(../blocks/place/__button-like/_active/place__button-like_active.css);
+@import url(../blocks/place/__button-delete/place__button-delete.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__content/footer__content.css);
@@ -39,3 +40,10 @@
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__button-save/popup__button-save.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
+
+@import url(../blocks/popup-image/__box/popup-image__box.css);
+@import url(../blocks/popup-image/popup-image.css);
+@import url(../blocks/popup-image/__container/popup-image__container.css);
+@import url(../blocks/popup-image/__foto/popup-image__foto.css);
+@import url(../blocks/popup-image/__sign/popup-image__sign.css);
+@import url(../blocks/popup-image/__close/popup-image__close.css);
