--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -8,6 +8,7 @@
   margin-left: 18px;
   width: 24px;
   height: 24px;
+  cursor: pointer;
 }
 @media screen and (max-width: 650px) {
   .profile__edit-button {
