--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -5,4 +5,7 @@
   width: 100%;
   object-fit: cover;
   object-position: center;
+  background-color: rgb(0, 0, 0);
+  cursor: pointer;
+  color: rgb(255, 255, 255);
 }
