--- a/pages/index.css
+++ b/pages/index.css
@@ -43,6 +43,7 @@
 
 @import url(../blocks/popup-image/__box/popup-image__box.css);
 @import url(../blocks/popup-image/popup-image.css);
+@import url(../blocks/popup-image/__opened/popup-image__opened.css);
 @import url(../blocks/popup-image/__container/popup-image__container.css);
 @import url(../blocks/popup-image/__foto/popup-image__foto.css);
 @import url(../blocks/popup-image/__sign/popup-image__sign.css);
