--- a/blocks/popup/__save/_inactive/popup__save_inactive.css
+++ b/blocks/popup/__save/_inactive/popup__save_inactive.css
@@ -1,4 +1,6 @@
 .popup__save_inactive {
-  background: #e5e5e5;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  color: rgba(0, 0, 0, 0.2);
+  background-color: #fff;
   pointer-events: none;
 }
