--- a/blocks/popup/__save/popup__save.css
+++ b/blocks/popup/__save/popup__save.css
@@ -6,10 +6,14 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
-  border: none;
   outline: none;
   border-radius: 2px;
   cursor: pointer;
+  border-width: thin;
+}
+
+.popup__save:hover {
+  opacity: 0.8;
 }
 
 @media screen and (max-width: 618px) {
