--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -1,11 +1,14 @@
 .popup {
-  align-items: center;
-  justify-content: center;
-  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
   position: fixed;
   top: 0;
   left: 0;
-  bottom: 0;
-  right: 0;
-  display: none;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  visibility: hidden;
+  transition: visibility 0.3s, opacity 0.5s linear;
 }
