--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,55 +1,46 @@
 @import url(../vendor/normalize.css);
-
-@import url(../vendor/fonts/fonts.css);
-
-@import url(../pages/index.css);
-
+@import url(../vendor/fonts/InterWeb/inter.css);
 @import url(../blocks/page/page.css);
-
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
-
+@import url(../blocks/content/content.css);
 @import url(../blocks/profile/profile.css);
-@import url(../blocks/profile/__content/profile__content.css);
-@import url(../blocks/profile/__photo/profile__photo.css);
-@import url(../blocks/profile/__bio/profile__bio.css);
-@import url(../blocks/profile/__info/profile__info.css);
-@import url(../blocks/profile/__title/profile__title.css);
-@import url(../blocks/profile/__subtitle/profile__subtitle.css);
-@import url(../blocks/profile/__edit-button/profile__edit-button.css);
+@import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__avatar-update/profile__avatar-update.css);
+@import url(../blocks/profile/__person/profile__person.css);
+@import url(../blocks/profile/__job/profile__job.css);
+@import url(../blocks/profile/__edit/profile__edit.css);
+@import url(../blocks/profile/__container/profile__container.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
-
-@import url(../blocks/places/places.css);
-
-@import url(../blocks/place/place.css);
-@import url(../blocks/place/__image/place__image.css);
-@import url(../blocks/place/__info/place__info.css);
-@import url(../blocks/place/__title/place__title.css);
-@import url(../blocks/place/__button-like/place__button-like.css);
-@import url(../blocks/place/__button-like/_active/place__button-like_active.css);
-@import url(../blocks/place/__button-delete/place__button-delete.css);
-
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/cards-list/cards-list.css);
+@import url(../blocks/cards-list/__card-container/cards-list__card-container.css);
+@import url(../blocks/cards-list/__card-image/cards-list__card-image.css);
+@import url(../blocks/cards-list/__like-container/cards-list__like-container.css);
+@import url(../blocks/cards-list/__like/cards-list__like.css);
+@import url(../blocks/cards-list/__name/cards-list__name.css);
+@import url(../blocks/cards-list/__info/cards-list__info.css);
+@import url(../blocks/cards-list/__card-bin/cards-list__card-bin.css);
+@import url(../blocks/cards-list/__card-bin/_hidden/cards-list__card-bin_hidden.css);
+@import url(../blocks/cards-list/__like-counter/cards-list__like-counter.css);
 @import url(../blocks/footer/footer.css);
-@import url(../blocks/footer/__content/footer__content.css);
-
+@import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/popup/popup.css);
-@import url(../blocks/popup/__container/popup__container.css);
-@import url(../blocks/popup/__button-close/popup__button-close.css);
-@import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/_type/_show-image.css);
 @import url(../blocks/popup/__form/popup__form.css);
+@import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__title/_type/_confirm.css);
+@import url(../blocks/popup/__title/_type/_avatar-save.css);
 @import url(../blocks/popup/__input/popup__input.css);
-@import url(../blocks/popup/__save/popup__save.css);
+@import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__button/popup__button.css);
+@import url(../blocks/popup/__close/popup__close.css);
+@import url(../blocks/popup/__icon/popup__icon.css);
+@import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__text/popup__text.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
-
-@import url(../blocks/popup-image/__box/popup-image__box.css);
-@import url(../blocks/popup-image/popup-image.css);
-@import url(../blocks/popup-image/__opened/popup-image__opened.css);
-@import url(../blocks/popup-image/__container/popup-image__container.css);
-@import url(../blocks/popup-image/__foto/popup-image__foto.css);
-@import url(../blocks/popup-image/__sign/popup-image__sign.css);
-@import url(../blocks/popup-image/__close/popup-image__close.css);
-
-@import url(../blocks/popup/__save/_inactive/popup__save_inactive.css);
-@import url(../blocks/popup/__info-error/popup__info-error.css);
-@import url(../blocks/popup/__input/_type_active/popup__input_type_active.css);
-@import url(../blocks/popup/__info-error/_active/popup__info-error_active.css);
+@import url(../blocks/popup/__image/popup__image.css);
+@import url(../blocks/cards-list/__like/_active/cards-list__like_active.css);
+@import url(../blocks/popup/__button/_disabled/popup__button_disabled.css);
+@import url(../blocks/popup/__error/popup__error.css);
+@import url(../blocks/popup/__input/_error/popup__input_error.css);
